src/FirewallParser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.7 from src/FirewallParser.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseScript -> Script                       (0)
	Script -> Network Packets Rules                    (1)
	Network -> network '{' DeviceList '}'              (2)
	DeviceList -> Device                               (3)
	DeviceList -> Device DeviceList                    (4)
	Device -> device IDENT '{' DeviceFields '}'        (5)
	SubnetVal -> IP_ADDR '/' NUMBER                    (6)
	DeviceFields -> mac '=' STRING ';' ip '=' IP_ADDR ';' subnet '=' SubnetVal ';' interfaces '=' IfList ';'   (7)
	IfList -> STRING                                   (8)
	IfList -> STRING ',' IfList                        (9)
	Packets -> packets '{' PacketList '}'              (10)
	PacketList -> Packet                               (11)
	PacketList -> Packet PacketList                    (12)
	Packet -> IDENT ':' IP_ADDR '->' IP_ADDR ':' Protocol NUMBER '->' NUMBER ':' from STRING to STRING ';'   (13)
	Protocol -> tcp                                    (14)
	Protocol -> udp                                    (15)
	Protocol -> any                                    (16)
	Rules -> rules '{' ChainDecls '}'                  (17)
	ChainDecls ->                                      (18)
	ChainDecls -> ChainBlock ChainDecls                (19)
	ChainBlock -> chain CHAIN_NAME '{' Stmts '}'       (20)
	Stmts ->                                           (21)
	Stmts -> Stmt Stmts                                (22)
	Stmt -> Rule ';'                                   (23)
	Stmt -> DefaultPolicy                              (24)
	DefaultPolicy -> '-' default ACTION ';'            (25)
	CHAIN_NAME -> INPUT                                (26)
	CHAIN_NAME -> OUTPUT                               (27)
	CHAIN_NAME -> FORWARD                              (28)
	Rule -> SpecList '-' do ACTION                     (29)
	ACTION -> ACCEPT                                   (30)
	ACTION -> DROP                                     (31)
	ACTION -> REJECT                                   (32)
	SpecList -> Spec                                   (33)
	SpecList -> SpecList Spec                          (34)
	SpecList -> '!' Spec                               (35)
	Spec -> '-' srcip IPList                           (36)
	Spec -> '-' dstip IPList                           (37)
	Spec -> '-' prot Protocol                          (38)
	Spec -> '-' inif IfList                            (39)
	Spec -> '-' outif IfList                           (40)
	Spec -> '-' srcp PortSpec                          (41)
	Spec -> '-' dstp PortSpec                          (42)
	Spec -> '-' srcsubnet SubnetList                   (43)
	Spec -> '-' dstsubnet SubnetList                   (44)
	Spec -> '(' SpecList ')'                           (45)
	IPList -> IP_ADDR                                  (46)
	IPList -> IP_ADDR ',' IPList                       (47)
	SubnetList -> IP_ADDR '/' NUMBER                   (48)
	SubnetList -> IP_ADDR '/' NUMBER ',' SubnetList    (49)
	PortSpec -> PortList                               (50)
	PortList -> NUMBER                                 (51)
	PortList -> NUMBER ',' PortList                    (52)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	device         { TokenDevice $$ }
	mac            { TokenDeviceMac }
	ip             { TokenDeviceIP }
	subnet         { TokenDeviceSubnet }
	interfaces     { TokenDeviceInterfaces }
	'{'            { TokenOpenBracket }
	'}'            { TokenCloseBracket }
	'='            { TokenAssign }
	';'            { TokenSemicolon }
	packets        { TokenPackets }
	'->'           { TokenArrow }
	':'            { TokenColon }
	tcp            { TokenTCP }
	udp            { TokenUDP }
	any            { TokenANY }
	','            { TokenComma }
	rules          { TokenRules }
	chain          { TokenChain }
	INPUT          { TokenInput }
	OUTPUT         { TokenOutput }
	FORWARD        { TokenForward }
	from           { TokenFrom }
	to             { TokenTo }
	STRING         { TokenString $$ }
	IDENT          { TokenIdent $$ }
	NUMBER         { TokenNumber $$ }
	IP_ADDR        { TokenIP $$ }
	'('            { TokenLParen }
	')'            { TokenRParen }
	'!'            { TokenNot }
	'-'            { TokenDash }
	'/'            { TokenSlash }
	network        { TokenNetwork }
	srcip          { TokenSrcIP }
	dstip          { TokenDstIP }
	prot           { TokenProt }
	inif           { TokenInIf }
	outif          { TokenOutIf }
	srcp           { TokenSrcPort }
	dstp           { TokenDstPort }
	srcsubnet      { TokenSrcSubnet }
	dstsubnet      { TokenDstSubnet }
	do             { TokenDo }
	default        { TokenDefault }
	ACCEPT         { TokenAccept }
	DROP           { TokenDrop }
	REJECT         { TokenReject }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseScript rule  0
	Script          rule  1
	Network         rule  2
	DeviceList      rules 3, 4
	Device          rule  5
	SubnetVal       rule  6
	DeviceFields    rule  7
	IfList          rules 8, 9
	Packets         rule  10
	PacketList      rules 11, 12
	Packet          rule  13
	Protocol        rules 14, 15, 16
	Rules           rule  17
	ChainDecls      rules 18, 19
	ChainBlock      rule  20
	Stmts           rules 21, 22
	Stmt            rules 23, 24
	DefaultPolicy   rule  25
	CHAIN_NAME      rules 26, 27, 28
	Rule            rule  29
	ACTION          rules 30, 31, 32
	SpecList        rules 33, 34, 35
	Spec            rules 36, 37, 38, 39, 40, 41, 42, 43, 44, 45
	IPList          rules 46, 47
	SubnetList      rules 48, 49
	PortSpec        rule  50
	PortList        rules 51, 52

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseScript -> . Script                      (rule 0)

	network        shift, and enter state 3

	Script         goto state 4
	Network        goto state 2

State 1

	Script -> . Network Packets Rules                   (rule 1)

	network        shift, and enter state 3

	Network        goto state 2

State 2

	Script -> Network . Packets Rules                   (rule 1)

	packets        shift, and enter state 7

	Packets        goto state 6

State 3

	Network -> network . '{' DeviceList '}'             (rule 2)

	'{'            shift, and enter state 5


State 4

	%start_parseScript -> Script .                      (rule 0)

	%eof           accept


State 5

	Network -> network '{' . DeviceList '}'             (rule 2)

	device         shift, and enter state 13

	DeviceList     goto state 11
	Device         goto state 12

State 6

	Script -> Network Packets . Rules                   (rule 1)

	rules          shift, and enter state 10

	Rules          goto state 9

State 7

	Packets -> packets . '{' PacketList '}'             (rule 10)

	'{'            shift, and enter state 8


State 8

	Packets -> packets '{' . PacketList '}'             (rule 10)

	IDENT          shift, and enter state 20

	PacketList     goto state 18
	Packet         goto state 19

State 9

	Script -> Network Packets Rules .                   (rule 1)

	%eof           reduce using rule 1


State 10

	Rules -> rules . '{' ChainDecls '}'                 (rule 17)

	'{'            shift, and enter state 17


State 11

	Network -> network '{' DeviceList . '}'             (rule 2)

	'}'            shift, and enter state 16


State 12

	DeviceList -> Device .                              (rule 3)
	DeviceList -> Device . DeviceList                   (rule 4)

	device         shift, and enter state 13
	'}'            reduce using rule 3

	DeviceList     goto state 15
	Device         goto state 12

State 13

	Device -> device . IDENT '{' DeviceFields '}'       (rule 5)

	IDENT          shift, and enter state 14


State 14

	Device -> device IDENT . '{' DeviceFields '}'       (rule 5)

	'{'            shift, and enter state 27


State 15

	DeviceList -> Device DeviceList .                   (rule 4)

	'}'            reduce using rule 4


State 16

	Network -> network '{' DeviceList '}' .             (rule 2)

	packets        reduce using rule 2


State 17

	Rules -> rules '{' . ChainDecls '}'                 (rule 17)

	'}'            reduce using rule 18
	chain          shift, and enter state 26

	ChainDecls     goto state 24
	ChainBlock     goto state 25

State 18

	Packets -> packets '{' PacketList . '}'             (rule 10)

	'}'            shift, and enter state 23


State 19

	PacketList -> Packet .                              (rule 11)
	PacketList -> Packet . PacketList                   (rule 12)

	'}'            reduce using rule 11
	IDENT          shift, and enter state 20

	PacketList     goto state 22
	Packet         goto state 19

State 20

	Packet -> IDENT . ':' IP_ADDR '->' IP_ADDR ':' Protocol NUMBER '->' NUMBER ':' from STRING to STRING ';'    (rule 13)

	':'            shift, and enter state 21


State 21

	Packet -> IDENT ':' . IP_ADDR '->' IP_ADDR ':' Protocol NUMBER '->' NUMBER ':' from STRING to STRING ';'    (rule 13)

	IP_ADDR        shift, and enter state 36


State 22

	PacketList -> Packet PacketList .                   (rule 12)

	'}'            reduce using rule 12


State 23

	Packets -> packets '{' PacketList '}' .             (rule 10)

	rules          reduce using rule 10


State 24

	Rules -> rules '{' ChainDecls . '}'                 (rule 17)

	'}'            shift, and enter state 35


State 25

	ChainDecls -> ChainBlock . ChainDecls               (rule 19)

	'}'            reduce using rule 18
	chain          shift, and enter state 26

	ChainDecls     goto state 34
	ChainBlock     goto state 25

State 26

	ChainBlock -> chain . CHAIN_NAME '{' Stmts '}'      (rule 20)

	INPUT          shift, and enter state 31
	OUTPUT         shift, and enter state 32
	FORWARD        shift, and enter state 33

	CHAIN_NAME     goto state 30

State 27

	Device -> device IDENT '{' . DeviceFields '}'       (rule 5)

	mac            shift, and enter state 29

	DeviceFields   goto state 28

State 28

	Device -> device IDENT '{' DeviceFields . '}'       (rule 5)

	'}'            shift, and enter state 40


State 29

	DeviceFields -> mac . '=' STRING ';' ip '=' IP_ADDR ';' subnet '=' SubnetVal ';' interfaces '=' IfList ';'    (rule 7)

	'='            shift, and enter state 39


State 30

	ChainBlock -> chain CHAIN_NAME . '{' Stmts '}'      (rule 20)

	'{'            shift, and enter state 38


State 31

	CHAIN_NAME -> INPUT .                               (rule 26)

	'{'            reduce using rule 26


State 32

	CHAIN_NAME -> OUTPUT .                              (rule 27)

	'{'            reduce using rule 27


State 33

	CHAIN_NAME -> FORWARD .                             (rule 28)

	'{'            reduce using rule 28


State 34

	ChainDecls -> ChainBlock ChainDecls .               (rule 19)

	'}'            reduce using rule 19


State 35

	Rules -> rules '{' ChainDecls '}' .                 (rule 17)

	%eof           reduce using rule 17


State 36

	Packet -> IDENT ':' IP_ADDR . '->' IP_ADDR ':' Protocol NUMBER '->' NUMBER ':' from STRING to STRING ';'    (rule 13)

	'->'           shift, and enter state 37


State 37

	Packet -> IDENT ':' IP_ADDR '->' . IP_ADDR ':' Protocol NUMBER '->' NUMBER ':' from STRING to STRING ';'    (rule 13)

	IP_ADDR        shift, and enter state 51


State 38

	ChainBlock -> chain CHAIN_NAME '{' . Stmts '}'      (rule 20)

	'}'            reduce using rule 21
	'('            shift, and enter state 48
	'!'            shift, and enter state 49
	'-'            shift, and enter state 50

	Stmts          goto state 42
	Stmt           goto state 43
	DefaultPolicy  goto state 44
	Rule           goto state 45
	SpecList       goto state 46
	Spec           goto state 47

State 39

	DeviceFields -> mac '=' . STRING ';' ip '=' IP_ADDR ';' subnet '=' SubnetVal ';' interfaces '=' IfList ';'    (rule 7)

	STRING         shift, and enter state 41


State 40

	Device -> device IDENT '{' DeviceFields '}' .       (rule 5)

	device         reduce using rule 5
	'}'            reduce using rule 5


State 41

	DeviceFields -> mac '=' STRING . ';' ip '=' IP_ADDR ';' subnet '=' SubnetVal ';' interfaces '=' IfList ';'    (rule 7)

	';'            shift, and enter state 71


State 42

	ChainBlock -> chain CHAIN_NAME '{' Stmts . '}'      (rule 20)

	'}'            shift, and enter state 70


State 43

	Stmts -> Stmt . Stmts                               (rule 22)

	'}'            reduce using rule 21
	'('            shift, and enter state 48
	'!'            shift, and enter state 49
	'-'            shift, and enter state 50

	Stmts          goto state 69
	Stmt           goto state 43
	DefaultPolicy  goto state 44
	Rule           goto state 45
	SpecList       goto state 46
	Spec           goto state 47

State 44

	Stmt -> DefaultPolicy .                             (rule 24)

	'}'            reduce using rule 24
	'('            reduce using rule 24
	'!'            reduce using rule 24
	'-'            reduce using rule 24


State 45

	Stmt -> Rule . ';'                                  (rule 23)

	';'            shift, and enter state 68


State 46

	Rule -> SpecList . '-' do ACTION                    (rule 29)
	SpecList -> SpecList . Spec                         (rule 34)

	'('            shift, and enter state 48
	'-'            shift, and enter state 67

	Spec           goto state 66

State 47

	SpecList -> Spec .                                  (rule 33)

	'('            reduce using rule 33
	')'            reduce using rule 33
	'-'            reduce using rule 33


State 48

	Spec -> '(' . SpecList ')'                          (rule 45)

	'('            shift, and enter state 48
	'!'            shift, and enter state 49
	'-'            shift, and enter state 64

	SpecList       goto state 65
	Spec           goto state 47

State 49

	SpecList -> '!' . Spec                              (rule 35)

	'('            shift, and enter state 48
	'-'            shift, and enter state 64

	Spec           goto state 63

State 50

	DefaultPolicy -> '-' . default ACTION ';'           (rule 25)
	Spec -> '-' . srcip IPList                          (rule 36)
	Spec -> '-' . dstip IPList                          (rule 37)
	Spec -> '-' . prot Protocol                         (rule 38)
	Spec -> '-' . inif IfList                           (rule 39)
	Spec -> '-' . outif IfList                          (rule 40)
	Spec -> '-' . srcp PortSpec                         (rule 41)
	Spec -> '-' . dstp PortSpec                         (rule 42)
	Spec -> '-' . srcsubnet SubnetList                  (rule 43)
	Spec -> '-' . dstsubnet SubnetList                  (rule 44)

	srcip          shift, and enter state 53
	dstip          shift, and enter state 54
	prot           shift, and enter state 55
	inif           shift, and enter state 56
	outif          shift, and enter state 57
	srcp           shift, and enter state 58
	dstp           shift, and enter state 59
	srcsubnet      shift, and enter state 60
	dstsubnet      shift, and enter state 61
	default        shift, and enter state 62


State 51

	Packet -> IDENT ':' IP_ADDR '->' IP_ADDR . ':' Protocol NUMBER '->' NUMBER ':' from STRING to STRING ';'    (rule 13)

	':'            shift, and enter state 52


State 52

	Packet -> IDENT ':' IP_ADDR '->' IP_ADDR ':' . Protocol NUMBER '->' NUMBER ':' from STRING to STRING ';'    (rule 13)

	tcp            shift, and enter state 90
	udp            shift, and enter state 91
	any            shift, and enter state 92

	Protocol       goto state 96

State 53

	Spec -> '-' srcip . IPList                          (rule 36)

	IP_ADDR        shift, and enter state 94

	IPList         goto state 95

State 54

	Spec -> '-' dstip . IPList                          (rule 37)

	IP_ADDR        shift, and enter state 94

	IPList         goto state 93

State 55

	Spec -> '-' prot . Protocol                         (rule 38)

	tcp            shift, and enter state 90
	udp            shift, and enter state 91
	any            shift, and enter state 92

	Protocol       goto state 89

State 56

	Spec -> '-' inif . IfList                           (rule 39)

	STRING         shift, and enter state 87

	IfList         goto state 88

State 57

	Spec -> '-' outif . IfList                          (rule 40)

	STRING         shift, and enter state 87

	IfList         goto state 86

State 58

	Spec -> '-' srcp . PortSpec                         (rule 41)

	NUMBER         shift, and enter state 84

	PortSpec       goto state 85
	PortList       goto state 83

State 59

	Spec -> '-' dstp . PortSpec                         (rule 42)

	NUMBER         shift, and enter state 84

	PortSpec       goto state 82
	PortList       goto state 83

State 60

	Spec -> '-' srcsubnet . SubnetList                  (rule 43)

	IP_ADDR        shift, and enter state 80

	SubnetList     goto state 81

State 61

	Spec -> '-' dstsubnet . SubnetList                  (rule 44)

	IP_ADDR        shift, and enter state 80

	SubnetList     goto state 79

State 62

	DefaultPolicy -> '-' default . ACTION ';'           (rule 25)

	ACCEPT         shift, and enter state 76
	DROP           shift, and enter state 77
	REJECT         shift, and enter state 78

	ACTION         goto state 75

State 63

	SpecList -> '!' Spec .                              (rule 35)

	'('            reduce using rule 35
	')'            reduce using rule 35
	'-'            reduce using rule 35


State 64

	Spec -> '-' . srcip IPList                          (rule 36)
	Spec -> '-' . dstip IPList                          (rule 37)
	Spec -> '-' . prot Protocol                         (rule 38)
	Spec -> '-' . inif IfList                           (rule 39)
	Spec -> '-' . outif IfList                          (rule 40)
	Spec -> '-' . srcp PortSpec                         (rule 41)
	Spec -> '-' . dstp PortSpec                         (rule 42)
	Spec -> '-' . srcsubnet SubnetList                  (rule 43)
	Spec -> '-' . dstsubnet SubnetList                  (rule 44)

	srcip          shift, and enter state 53
	dstip          shift, and enter state 54
	prot           shift, and enter state 55
	inif           shift, and enter state 56
	outif          shift, and enter state 57
	srcp           shift, and enter state 58
	dstp           shift, and enter state 59
	srcsubnet      shift, and enter state 60
	dstsubnet      shift, and enter state 61


State 65

	SpecList -> SpecList . Spec                         (rule 34)
	Spec -> '(' SpecList . ')'                          (rule 45)

	'('            shift, and enter state 48
	')'            shift, and enter state 74
	'-'            shift, and enter state 64

	Spec           goto state 66

State 66

	SpecList -> SpecList Spec .                         (rule 34)

	'('            reduce using rule 34
	')'            reduce using rule 34
	'-'            reduce using rule 34


State 67

	Rule -> SpecList '-' . do ACTION                    (rule 29)
	Spec -> '-' . srcip IPList                          (rule 36)
	Spec -> '-' . dstip IPList                          (rule 37)
	Spec -> '-' . prot Protocol                         (rule 38)
	Spec -> '-' . inif IfList                           (rule 39)
	Spec -> '-' . outif IfList                          (rule 40)
	Spec -> '-' . srcp PortSpec                         (rule 41)
	Spec -> '-' . dstp PortSpec                         (rule 42)
	Spec -> '-' . srcsubnet SubnetList                  (rule 43)
	Spec -> '-' . dstsubnet SubnetList                  (rule 44)

	srcip          shift, and enter state 53
	dstip          shift, and enter state 54
	prot           shift, and enter state 55
	inif           shift, and enter state 56
	outif          shift, and enter state 57
	srcp           shift, and enter state 58
	dstp           shift, and enter state 59
	srcsubnet      shift, and enter state 60
	dstsubnet      shift, and enter state 61
	do             shift, and enter state 73


State 68

	Stmt -> Rule ';' .                                  (rule 23)

	'}'            reduce using rule 23
	'('            reduce using rule 23
	'!'            reduce using rule 23
	'-'            reduce using rule 23


State 69

	Stmts -> Stmt Stmts .                               (rule 22)

	'}'            reduce using rule 22


State 70

	ChainBlock -> chain CHAIN_NAME '{' Stmts '}' .      (rule 20)

	'}'            reduce using rule 20
	chain          reduce using rule 20


State 71

	DeviceFields -> mac '=' STRING ';' . ip '=' IP_ADDR ';' subnet '=' SubnetVal ';' interfaces '=' IfList ';'    (rule 7)

	ip             shift, and enter state 72


State 72

	DeviceFields -> mac '=' STRING ';' ip . '=' IP_ADDR ';' subnet '=' SubnetVal ';' interfaces '=' IfList ';'    (rule 7)

	'='            shift, and enter state 104


State 73

	Rule -> SpecList '-' do . ACTION                    (rule 29)

	ACCEPT         shift, and enter state 76
	DROP           shift, and enter state 77
	REJECT         shift, and enter state 78

	ACTION         goto state 103

State 74

	Spec -> '(' SpecList ')' .                          (rule 45)

	'('            reduce using rule 45
	')'            reduce using rule 45
	'-'            reduce using rule 45


State 75

	DefaultPolicy -> '-' default ACTION . ';'           (rule 25)

	';'            shift, and enter state 102


State 76

	ACTION -> ACCEPT .                                  (rule 30)

	';'            reduce using rule 30


State 77

	ACTION -> DROP .                                    (rule 31)

	';'            reduce using rule 31


State 78

	ACTION -> REJECT .                                  (rule 32)

	';'            reduce using rule 32


State 79

	Spec -> '-' dstsubnet SubnetList .                  (rule 44)

	'('            reduce using rule 44
	')'            reduce using rule 44
	'-'            reduce using rule 44


State 80

	SubnetList -> IP_ADDR . '/' NUMBER                  (rule 48)
	SubnetList -> IP_ADDR . '/' NUMBER ',' SubnetList    (rule 49)

	'/'            shift, and enter state 101


State 81

	Spec -> '-' srcsubnet SubnetList .                  (rule 43)

	'('            reduce using rule 43
	')'            reduce using rule 43
	'-'            reduce using rule 43


State 82

	Spec -> '-' dstp PortSpec .                         (rule 42)

	'('            reduce using rule 42
	')'            reduce using rule 42
	'-'            reduce using rule 42


State 83

	PortSpec -> PortList .                              (rule 50)

	'('            reduce using rule 50
	')'            reduce using rule 50
	'-'            reduce using rule 50


State 84

	PortList -> NUMBER .                                (rule 51)
	PortList -> NUMBER . ',' PortList                   (rule 52)

	','            shift, and enter state 100
	'('            reduce using rule 51
	')'            reduce using rule 51
	'-'            reduce using rule 51


State 85

	Spec -> '-' srcp PortSpec .                         (rule 41)

	'('            reduce using rule 41
	')'            reduce using rule 41
	'-'            reduce using rule 41


State 86

	Spec -> '-' outif IfList .                          (rule 40)

	'('            reduce using rule 40
	')'            reduce using rule 40
	'-'            reduce using rule 40


State 87

	IfList -> STRING .                                  (rule 8)
	IfList -> STRING . ',' IfList                       (rule 9)

	';'            reduce using rule 8
	','            shift, and enter state 99
	'('            reduce using rule 8
	')'            reduce using rule 8
	'-'            reduce using rule 8


State 88

	Spec -> '-' inif IfList .                           (rule 39)

	'('            reduce using rule 39
	')'            reduce using rule 39
	'-'            reduce using rule 39


State 89

	Spec -> '-' prot Protocol .                         (rule 38)

	'('            reduce using rule 38
	')'            reduce using rule 38
	'-'            reduce using rule 38


State 90

	Protocol -> tcp .                                   (rule 14)

	NUMBER         reduce using rule 14
	'('            reduce using rule 14
	')'            reduce using rule 14
	'-'            reduce using rule 14


State 91

	Protocol -> udp .                                   (rule 15)

	NUMBER         reduce using rule 15
	'('            reduce using rule 15
	')'            reduce using rule 15
	'-'            reduce using rule 15


State 92

	Protocol -> any .                                   (rule 16)

	NUMBER         reduce using rule 16
	'('            reduce using rule 16
	')'            reduce using rule 16
	'-'            reduce using rule 16


State 93

	Spec -> '-' dstip IPList .                          (rule 37)

	'('            reduce using rule 37
	')'            reduce using rule 37
	'-'            reduce using rule 37


State 94

	IPList -> IP_ADDR .                                 (rule 46)
	IPList -> IP_ADDR . ',' IPList                      (rule 47)

	','            shift, and enter state 98
	'('            reduce using rule 46
	')'            reduce using rule 46
	'-'            reduce using rule 46


State 95

	Spec -> '-' srcip IPList .                          (rule 36)

	'('            reduce using rule 36
	')'            reduce using rule 36
	'-'            reduce using rule 36


State 96

	Packet -> IDENT ':' IP_ADDR '->' IP_ADDR ':' Protocol . NUMBER '->' NUMBER ':' from STRING to STRING ';'    (rule 13)

	NUMBER         shift, and enter state 97


State 97

	Packet -> IDENT ':' IP_ADDR '->' IP_ADDR ':' Protocol NUMBER . '->' NUMBER ':' from STRING to STRING ';'    (rule 13)

	'->'           shift, and enter state 110


State 98

	IPList -> IP_ADDR ',' . IPList                      (rule 47)

	IP_ADDR        shift, and enter state 94

	IPList         goto state 109

State 99

	IfList -> STRING ',' . IfList                       (rule 9)

	STRING         shift, and enter state 87

	IfList         goto state 108

State 100

	PortList -> NUMBER ',' . PortList                   (rule 52)

	NUMBER         shift, and enter state 84

	PortList       goto state 107

State 101

	SubnetList -> IP_ADDR '/' . NUMBER                  (rule 48)
	SubnetList -> IP_ADDR '/' . NUMBER ',' SubnetList    (rule 49)

	NUMBER         shift, and enter state 106


State 102

	DefaultPolicy -> '-' default ACTION ';' .           (rule 25)

	'}'            reduce using rule 25
	'('            reduce using rule 25
	'!'            reduce using rule 25
	'-'            reduce using rule 25


State 103

	Rule -> SpecList '-' do ACTION .                    (rule 29)

	';'            reduce using rule 29


State 104

	DeviceFields -> mac '=' STRING ';' ip '=' . IP_ADDR ';' subnet '=' SubnetVal ';' interfaces '=' IfList ';'    (rule 7)

	IP_ADDR        shift, and enter state 105


State 105

	DeviceFields -> mac '=' STRING ';' ip '=' IP_ADDR . ';' subnet '=' SubnetVal ';' interfaces '=' IfList ';'    (rule 7)

	';'            shift, and enter state 113


State 106

	SubnetList -> IP_ADDR '/' NUMBER .                  (rule 48)
	SubnetList -> IP_ADDR '/' NUMBER . ',' SubnetList    (rule 49)

	','            shift, and enter state 112
	'('            reduce using rule 48
	')'            reduce using rule 48
	'-'            reduce using rule 48


State 107

	PortList -> NUMBER ',' PortList .                   (rule 52)

	'('            reduce using rule 52
	')'            reduce using rule 52
	'-'            reduce using rule 52


State 108

	IfList -> STRING ',' IfList .                       (rule 9)

	';'            reduce using rule 9
	'('            reduce using rule 9
	')'            reduce using rule 9
	'-'            reduce using rule 9


State 109

	IPList -> IP_ADDR ',' IPList .                      (rule 47)

	'('            reduce using rule 47
	')'            reduce using rule 47
	'-'            reduce using rule 47


State 110

	Packet -> IDENT ':' IP_ADDR '->' IP_ADDR ':' Protocol NUMBER '->' . NUMBER ':' from STRING to STRING ';'    (rule 13)

	NUMBER         shift, and enter state 111


State 111

	Packet -> IDENT ':' IP_ADDR '->' IP_ADDR ':' Protocol NUMBER '->' NUMBER . ':' from STRING to STRING ';'    (rule 13)

	':'            shift, and enter state 116


State 112

	SubnetList -> IP_ADDR '/' NUMBER ',' . SubnetList    (rule 49)

	IP_ADDR        shift, and enter state 80

	SubnetList     goto state 115

State 113

	DeviceFields -> mac '=' STRING ';' ip '=' IP_ADDR ';' . subnet '=' SubnetVal ';' interfaces '=' IfList ';'    (rule 7)

	subnet         shift, and enter state 114


State 114

	DeviceFields -> mac '=' STRING ';' ip '=' IP_ADDR ';' subnet . '=' SubnetVal ';' interfaces '=' IfList ';'    (rule 7)

	'='            shift, and enter state 118


State 115

	SubnetList -> IP_ADDR '/' NUMBER ',' SubnetList .    (rule 49)

	'('            reduce using rule 49
	')'            reduce using rule 49
	'-'            reduce using rule 49


State 116

	Packet -> IDENT ':' IP_ADDR '->' IP_ADDR ':' Protocol NUMBER '->' NUMBER ':' . from STRING to STRING ';'    (rule 13)

	from           shift, and enter state 117


State 117

	Packet -> IDENT ':' IP_ADDR '->' IP_ADDR ':' Protocol NUMBER '->' NUMBER ':' from . STRING to STRING ';'    (rule 13)

	STRING         shift, and enter state 121


State 118

	DeviceFields -> mac '=' STRING ';' ip '=' IP_ADDR ';' subnet '=' . SubnetVal ';' interfaces '=' IfList ';'    (rule 7)

	IP_ADDR        shift, and enter state 120

	SubnetVal      goto state 119

State 119

	DeviceFields -> mac '=' STRING ';' ip '=' IP_ADDR ';' subnet '=' SubnetVal . ';' interfaces '=' IfList ';'    (rule 7)

	';'            shift, and enter state 124


State 120

	SubnetVal -> IP_ADDR . '/' NUMBER                   (rule 6)

	'/'            shift, and enter state 123


State 121

	Packet -> IDENT ':' IP_ADDR '->' IP_ADDR ':' Protocol NUMBER '->' NUMBER ':' from STRING . to STRING ';'    (rule 13)

	to             shift, and enter state 122


State 122

	Packet -> IDENT ':' IP_ADDR '->' IP_ADDR ':' Protocol NUMBER '->' NUMBER ':' from STRING to . STRING ';'    (rule 13)

	STRING         shift, and enter state 127


State 123

	SubnetVal -> IP_ADDR '/' . NUMBER                   (rule 6)

	NUMBER         shift, and enter state 126


State 124

	DeviceFields -> mac '=' STRING ';' ip '=' IP_ADDR ';' subnet '=' SubnetVal ';' . interfaces '=' IfList ';'    (rule 7)

	interfaces     shift, and enter state 125


State 125

	DeviceFields -> mac '=' STRING ';' ip '=' IP_ADDR ';' subnet '=' SubnetVal ';' interfaces . '=' IfList ';'    (rule 7)

	'='            shift, and enter state 129


State 126

	SubnetVal -> IP_ADDR '/' NUMBER .                   (rule 6)

	';'            reduce using rule 6


State 127

	Packet -> IDENT ':' IP_ADDR '->' IP_ADDR ':' Protocol NUMBER '->' NUMBER ':' from STRING to STRING . ';'    (rule 13)

	';'            shift, and enter state 128


State 128

	Packet -> IDENT ':' IP_ADDR '->' IP_ADDR ':' Protocol NUMBER '->' NUMBER ':' from STRING to STRING ';' .    (rule 13)

	'}'            reduce using rule 13
	IDENT          reduce using rule 13


State 129

	DeviceFields -> mac '=' STRING ';' ip '=' IP_ADDR ';' subnet '=' SubnetVal ';' interfaces '=' . IfList ';'    (rule 7)

	STRING         shift, and enter state 87

	IfList         goto state 130

State 130

	DeviceFields -> mac '=' STRING ';' ip '=' IP_ADDR ';' subnet '=' SubnetVal ';' interfaces '=' IfList . ';'    (rule 7)

	';'            shift, and enter state 131


State 131

	DeviceFields -> mac '=' STRING ';' ip '=' IP_ADDR ';' subnet '=' SubnetVal ';' interfaces '=' IfList ';' .    (rule 7)

	'}'            reduce using rule 7


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 53
Number of terminals: 47
Number of non-terminals: 27
Number of states: 132
